train(java): add R04 Virtual Threads, R05 Sequenced Collections, R06 ZGC non-gen removal
- java/R04: Virtual Threads (JEP 444) finalized in JDK 21 LTS
- java/R05: Sequenced Collections (JEP 431) finalized in JDK 21 LTS
- java/R06: ZGC non-generational mode removed in JDK 25 LTS (JEP 490)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>